--- a/vue-npm-packages/solar-system-components/src/assets/sass/solar.scss
+++ b/vue-npm-packages/solar-system-components/src/assets/sass/solar.scss
@@ -5,6 +5,7 @@
     height: 100%;
     background:#000 no-repeat center center;
     background-size:100% 100%;
+    overflow: hidden;
 }
 
 
@@ -122,6 +123,7 @@
         color:#fff;
         font-size:2em;
         z-index:10;
+        transform: rotate(4deg);
     }
 }
 
